<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_collections_bookmark_black_24px"
            android:title="@string/project" />

        <!--<item-->
            <!--android:id="@+id/nav_comments"-->
            <!--android:icon="@drawable/ic_menu_chat_black_24px"-->
            <!--android:title="@string/last_comments" />-->

        <item
            android:id="@+id/nav_area"
            android:icon="@drawable/ic_supervisor_account_black_24px"
            android:title="@string/choose_area"/>
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="Conexão">
        <menu>
            <item
                android:id="@+id/nav_last_sync"
                android:icon="@drawable/ic_autorenew_black_24px"
                android:title="@string/last_sync"
                />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

</menu>
