<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gplearning.gplearning.Controllers.PerfilActivity"
    tools:showIn="@layout/activity_perfil">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/perfilIcon"
                android:src="@drawable/ic_email_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/perfilTextLabel"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/perfilEmail"
                    style="@style/perfilTextValor"
                    android:text="email@email.com" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/perfilIcon"
                android:src="@drawable/ic_call_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/perfilTextLabel"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/perfilTelefone"
                    style="@style/perfilTextValor"
                    android:text="9955434293" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/perfilIcon"
                android:src="@drawable/ic_supervisor_account_black_24px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/perfilTextLabel"
                    android:text="@string/classroom" />

                <TextView
                    android:id="@+id/perfilTurma"
                    style="@style/perfilTextValor"
                    android:text="Turma Oficial" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                style="@style/perfilIcon"
                android:src="@drawable/ic_gamepad_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/perfilTextLabel"
                    android:text="@string/pontuation" />

                <TextView
                    android:id="@+id/perfilPontuacao"
                    style="@style/perfilTextValor"
                    android:text="26 Pontos" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutIndicadores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18dp"
                android:text="@string/averageScoreIndicator"/>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical"-->
                <!--android:paddingLeft="15dp"-->
                <!--android:layout_marginBottom="20dp">-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--style="@style/perfilTextValor"-->
                    <!--android:layout_marginBottom="0dp"-->
                    <!--android:text="Indicador"/>-->

                <!--<RatingBar-->
                    <!--android:id="@+id/ratingBar"-->
                    <!--style="@style/Widget.AppCompat.RatingBar.Small"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:numStars="5"-->
                    <!--android:rating="3" />-->

            <!--</LinearLayout>-->

        </LinearLayout>

    </LinearLayout>




    <!--<android.support.constraint.ConstraintLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<ImageView-->
    <!--android:layout_width="30dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:src="@drawable/ic_menu_chat_black_24px"-->
    <!--android:layout_marginLeft="44dp"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--android:layout_marginTop="52dp" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Email"-->
    <!--tools:layout_editor_absoluteY="74dp"-->
    <!--tools:layout_editor_absoluteX="101dp" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:layout_marginRight="8dp"-->
    <!--android:layout_marginTop="767dp"-->
    <!--android:text="tesxtes"-->
    <!--app:layout_constraintHorizontal_bias="0.6"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--</android.support.constraint.ConstraintLayout>-->

</android.support.v4.widget.NestedScrollView>
